--- a/core/template/dashboard/cmd.info.numeric.distance.html
+++ b/core/template/dashboard/cmd.info.numeric.distance.html
@@ -1,4 +1,4 @@
-    <span >Compteur : </span><span  data-cmd_id="#id#" data-cmd_uid="#uid#" data-version="#version#" data-eqLogic_id="#eqLogic_id#">#value# km</span><br>
+    <span >Compteur : </span><span  data-cmd_id="#id#" data-cmd_uid="#uid#" data-version="#version#" data-eqLogic_id="#eqLogic_id#">#value#</span> km<br>
     <script>
         jeedom.cmd.addUpdateFunction('#id#',function(_options) {
             document.querySelector('[data-cmd_id="#id#"]').setAttribute('title','{{Date de valeur}} : '+_options.valueDate+'<br/>{{Date de collecte}} : '+_options.collectDate);
